--- a/src/app/components/planb/planb.component.html
+++ b/src/app/components/planb/planb.component.html
@@ -9,8 +9,8 @@
     </div>
 </div>
 
-<li *ngFor="let br of browserData">
-     {{br.marketshare}}
+<li *ngFor="let br of heroesArray">
+     {{br.color}}
 </li>
 
    
